--- a/map.html
+++ b/map.html
@@ -245,7 +245,10 @@ var GW2T_RESOURCES_DATA = {
 </script>
 <div class="cntComposition">
 
+
 <h1>Map</h1>
+<header id="mapHeader_Zone" class="jsCollapsible"><img src="img/map/completion.png" alt="Jumping Puzzles" />Map Zones</header>
+<div>
 <div class="mapZoneList mapLinks">
 	<div>
 	<h2>Kryta</h2>
@@ -303,7 +306,7 @@ var GW2T_RESOURCES_DATA = {
 	</ul>
 	</div>
 </div>
-
+</div>
 
 <header id="mapHeader_Daily" class="jsCollapsible"><img src="img/ui/ap.png" alt="Daily Achievements" />Daily Achievements</header>
 <div>
@@ -379,8 +382,9 @@ Use your sword2/focus4 mesmer to do these quickly.
 <br />
 
 <h2><img src="img/daily/reviver.png" alt="Reviver" /> Reviver</h2>
-If there are others doing the daily, you should revive to 20% then move to the next body, so more people can get credit. * indicates the dead NPC icons are not shown on the minimap. If the NPCs are still alive, try to lure enemies to kill them.
+If there are others doing the daily, you should revive to 20% then move to the next body, so more people can get credit. * indicates the dead NPC icons are not shown on the minimap. If the NPCs are still alive, try to lure enemies to kill them. You can find more revive spots at <a href="http://google.com/search?num=100&amp;q=site%3Awiki.guildwars2.com+revive+%22Renown+NPC%22">Renown Hearts</a>.
 <dl id="mapDailyList_Reviver">
+	<dt data-coord="[8698, 20360]">Jetzar Falls</dt><dd>Metrica Obsolete SCRAP-BOTs</dd>
 	<dt data-coord="[7617, 17607]">Thaumanova Reactor</dt><dd>Metrica irradiated asura</dd>
 	<dt data-coord="[6305, 15965]">Vandal's Claim</dt><dd>Brisban minefield</dd>
 	<dt data-coord="[14143, 13005]">The Bloodfields</dt><dd>Gendarran seraphs battlefield*</dd>
@@ -446,7 +450,7 @@ Simple jumps.
 	<dt data-coord="[10635, 20000]">Spelunker's Delve</dt><dd>Caledon giant mushrooms water cavern. Entrance is an underground hole covered by shrubs</dd>
 	<dt data-coord="[22078, 13584]">Shamans Rookery</dt><dd>Wayfarer raven knockbacks from rock pillars</dd>
 	<dt data-coord="[21490, 12271]">King Jalis's Refuge</dt><dd>Snowden Priory site with looters</dd>
-	<dt data-coord="[20756, 20878]">Coddler's Cove</dt><dd>Timberline skip jump over quaggan lanterns. <ins data-coord="[20685, 21217]">Inner cove entrance</ins> is at the rock steps by the wall sloping westward</dd>
+	<dt data-coord="[20756, 20878]">Coddler's Cove</dt><dd>Timberline skip jump over quaggan lanterns. Entrance is underwater. <ins data-coord="[20685, 21217]">Inner cove entrance</ins> is by the wall with rock steps sloping westward</dd>
 	<dt data-coord="[22073, 9112]">Shattered Ice Ruins</dt><dd>Frostgorge ice cave with trolls  skelks oozes</dd>
 	<dt data-coord="[26258, 13026]">Crimson Plateau</dt><dd>Diessa grawl plateau with rocks and ruins</dd>
 	<dt data-coord="[25136, 12227]">Grendich Gamble</dt><dd>Diessa ruined Ascalonian stone tower climb</dd>
@@ -468,7 +472,7 @@ Tricky jumps or interaction required
 	<dt data-coord="[9492, 18652]">Spekks's Laboratory</dt><dd>Caledon asuran light platforms with lava below</dd>
 	<dt data-coord="[17958, 21624]">Conundrum Cubed</dt><dd>Maelstrom floating cubes and electricity</dd>
 	<dt data-coord="[17545, 21917]">Hexfoundry Unhinged</dt><dd>Sparkfly destroyed and slanted Inquest platforms</dd>
-	<dt data-coord="[18077, 17118]">Griffonrook Run</dt><dd>Lornar's steep griffons rock pillars. Entrance is an underwater hole covered by kelp</dd>
+	<dt data-coord="[18077, 17118]">Griffonrook Run</dt><dd>Lornar's steep griffons rock pillars. Entrance is an underwater hole/well covered by kelp</dd>
 	<dt data-coord="[19819, 17950]">Tribulation Rift Scaffolding</dt><dd>Dredgehaunt tall tower scaffold planks</dd>
 	<dt data-coord="[19718, 17986]">Tribulation Caverns</dt><dd>Dredgehaunt ice cave after the scaffold JP</dd>
 	<dt data-coord="[21080, 18861]">Only Zuhl</dt><dd>Timberline dredge/destroyer volcanic cave</dd>
@@ -482,8 +486,8 @@ Tricky jumps or interaction required
 <h2>Hard <span class="mapLegendLine" style="border-bottom: 2px solid red"></span></h2>
 A marathon of intricate jumps.
 <dl class="mapJPList">
-	<dt data-coord="[15379, 14282]">Not So Secret</dt><dd>Gendarran trampolines aetherblade hideout</dd>
-	<dt data-coord="[9235, 18967]">Goemm's Lab</dt><dd>Metrica floating landmasses in the sky as asura stations</dd>
+	<dt data-coord="[15379, 14282]">Not So Secret</dt><dd>Gendarran aetherblade hideout with trampolines</dd>
+	<dt data-coord="[9235, 18967]">Goemm's Lab</dt><dd>Metrica floating landmasses in the sky as asura weather stations</dd>
 	<dt data-coord="[10963, 19197]">Dark Reverie</dt><dd>Caledon nightmare court blue hideout after Morgan's Spiral</dd>
 	<dt data-coord="[21357, 21885]">Hidden Garden</dt><dd>Maelstrom unlock four element cantles. Keeper portal locations: <ins data-coord="[18335, 22125]">Earth</ins>, <ins data-coord="[19523, 22724]">Light</ins>, <ins data-coord="[20143, 22209]">Waves</ins>, <ins data-coord="[20770, 23385]">Winds</ins></dd>
 	<dt data-coord="[27345, 13106]">Chaos Crystal Cavern</dt><dd>Marches skip rocks jumps with disorienting character transformations</dd>
@@ -494,6 +498,6 @@ A marathon of intricate jumps.
 </div>
 <br /><br />
 </div>
-
+<br />
 
 </div><!-- End of page -->
