Added JP pictures, clock compact animation

--- a/map.html
+++ b/map.html
@@ -389,6 +389,7 @@ If there are others doing the daily, you should revive to 20% then move to the n
 	<dt data-coord="[6305, 15965]">Vandal's Claim</dt><dd>Brisban minefield</dd>
 	<dt data-coord="[14143, 13005]">The Bloodfields</dt><dd>Gendarran seraphs battlefield*</dd>
 	<dt data-coord="[29670, 12434]">Lowland Burns</dt><dd>Blazeridge sentinel tank squad*</dd>
+	<dt data-coord="[25035, 12263]">Old Grendich</dt><dd>Diessa blood legion squad</dd>
 </dl>
 </div>
 <br />
@@ -436,63 +437,63 @@ Rich and T6 nodes reset in about 22 hours after gathering; T1-T5 nodes reset in 
 
 <header id="mapHeader_JP" class="jsCollapsible"><img src="img/ui/jp.png" alt="Jumping Puzzles" />Jumping Puzzles</header>
 <div>
-<p>The map pin refers to the JP's entrance. JPs in each list are sorted by location. The descriptions are to remind you of which JP it is. Clicking on a checkbox here or a JP icon on the map will save the checklist.</p>
+<p>The map pin refers to the JP's entrance. JPs in each list are sorted by location. Click on a checkbox here or a JP icon on the map to auto-save the checklist. Double click a JP icon to zoom in/out.</p>
 <button id="mapToggle_JP" class="cssRight">Toggle Icons</button>
 
 <div class="mapLinks">
 <h2>Easy <span class="mapLegendLine" style="border-bottom: 2px solid lime"></span></h2>
 Simple jumps.
-<dl class="mapJPList">
-	<dt data-coord="[17399, 14591]">Urmaug's Secret</dt><dd>LA short climbs up cave cliff</dd>
-	<dt data-coord="[13202, 13674]">Demongrub Pits</dt><dd>Queensdale small cave with grubs and skelks</dd>
-	<dt data-coord="[12781, 15876]">The Collapsed Observatory</dt><dd>Kessex cave ruins behind a river</dd>
-	<dt data-coord="[13884, 20428]">Under New Management</dt><dd>Southsun short climb up the Consortium building</dd>
-	<dt data-coord="[10635, 20000]">Spelunker's Delve</dt><dd>Caledon giant mushrooms water cavern. Entrance is an underground hole covered by shrubs</dd>
-	<dt data-coord="[22078, 13584]">Shamans Rookery</dt><dd>Wayfarer raven knockbacks from rock pillars</dd>
-	<dt data-coord="[21490, 12271]">King Jalis's Refuge</dt><dd>Snowden Priory site with looters</dd>
-	<dt data-coord="[20756, 20878]">Coddler's Cove</dt><dd>Timberline skip jump over quaggan lanterns. Entrance is underwater. <ins data-coord="[20685, 21217]">Inner cove entrance</ins> is by the wall with rock steps sloping westward</dd>
-	<dt data-coord="[22073, 9112]">Shattered Ice Ruins</dt><dd>Frostgorge ice cave with trolls  skelks oozes</dd>
-	<dt data-coord="[26258, 13026]">Crimson Plateau</dt><dd>Diessa grawl plateau with rocks and ruins</dd>
-	<dt data-coord="[25136, 12227]">Grendich Gamble</dt><dd>Diessa ruined Ascalonian stone tower climb</dd>
-	<dt data-coord="[25530, 13388]">Wall Breach Blitz</dt><dd>Diessa long Ascalonian wall with vista at end</dd>
-	<dt data-coord="[25986, 10719]">Pig Iron Quarry</dt><dd>Fireheart suspended carts high over two hills</dd>
-	<dt data-coord="[16325, 24485]">Vizier's Tower</dt><dd>Straits coral climb up a plateau tower</dd>
-	<dt data-coord="[11078, 29012]">Buried Archives</dt><dd>Cursed wall coral jump through risens eagles</dd>
+<dl data-jpdif="0" class="mapJPList"><!-- JP IDs are sorted by X coordinate (latitude) -->
+	<dt id="mapJP_19" data-coord="[17399, 14591]" data-img="yjaAbBF">Urmaug's Secret</dt><dd>LA short climbs up cave cliff</dd>
+	<dt id="mapJP_8" data-coord="[13202, 13674]" data-img="Bme6j1E">Demongrub Pits</dt><dd>Queensdale small cave with grubs and skelks</dd>
+	<dt id="mapJP_7" data-coord="[12781, 15876]" data-img="4JUI2Ba">The Collapsed Observatory</dt><dd>Kessex cave ruins behind a river</dd>
+	<dt id="mapJP_11" data-coord="[13884, 20428]" data-img="omyJBSk">Under New Management</dt><dd>Southsun short climb up the Consortium building</dd>
+	<dt id="mapJP_2" data-coord="[10635, 20000]" data-img="SkOg8q8">Spelunker's Delve</dt><dd>Caledon giant mushrooms water cavern. Entrance is an underground hole covered by shrubs</dd>
+	<dt id="mapJP_29" data-coord="[22074, 13584]" data-img="0vGbgNn">Shamans Rookery</dt><dd>Wayfarer raven knockbacks from rock pillars</dd>
+	<dt id="mapJP_28" data-coord="[21490, 12271]" data-img="y7bmCXv">King Jalis's Refuge</dt><dd>Snowden Priory site with looters</dd>
+	<dt id="mapJP_25" data-coord="[20756, 20878]" data-img="iWXzOXM">Coddler's Cove</dt><dd>Timberline skip jump over quaggan lanterns. Entrance is underwater. <ins data-coord="[20685, 21217]">Inner cove</ins> <a href="http://i.imgur.com/1CRkPDo.png">entrance note</a></dd>
+	<dt id="mapJP_30" data-coord="[22075, 9112]" data-img="sV7XcGd">Shattered Ice Ruins</dt><dd>Frostgorge ice cave with trolls  skelks oozes</dd>
+	<dt id="mapJP_34" data-coord="[26258, 13026]" data-img="CETyR64">Crimson Plateau</dt><dd>Diessa grawl plateau with rocks and ruins</dd>
+	<dt id="mapJP_31" data-coord="[25136, 12227]" data-img="7Qxd1Wx">Grendich Gamble</dt><dd>Diessa ruined Ascalonian stone tower climb</dd>
+	<dt id="mapJP_32" data-coord="[25530, 13388]" data-img="c8sAP6V">Wall Breach Blitz</dt><dd>Diessa long Ascalonian wall with vista at end</dd>
+	<dt id="mapJP_35" data-coord="[27345, 13106]" data-img="S0JZgxG">Chaos Crystal Cavern</dt><dd>Marches skip rocks jumps with character transformations. <a href="http://i.imgur.com/hQKO6Mi.png">Shortcut note</a></dd>
+	<dt id="mapJP_33" data-coord="[25986, 10719]" data-img="0RIGbvR">Pig Iron Quarry</dt><dd>Fireheart suspended carts high over two hills</dd>
+	<dt id="mapJP_16" data-coord="[16325, 24485]" data-img="1whVJrb">Vizier's Tower</dt><dd>Straits coral climb up a plateau tower</dd>
+	<dt id="mapJP_5" data-coord="[11078, 29012]" data-img="5AAMpcO">Buried Archives</dt><dd>Cursed wall coral jump through risens eagles</dd>
 </dl>
 <br />
 <h2>Medium <span class="mapLegendLine" style="border-bottom: 2px solid orange"></span></h2>
 Tricky jumps or interaction required
-<dl class="mapJPList">
-	<dt data-coord="[16300, 14605]">Troll's End</dt><dd>LA stalactite cave with planks</dd>
-	<dt data-coord="[17210, 15481]">Weyandt's Revenge</dt><dd>LA huge pirate themed cave</dd>
-	<dt data-coord="[16670, 14183]">Swashbuckler's Cove</dt><dd>Gendarran light torches and swim in time</dd>
-	<dt data-coord="[14340, 9666]">Fawcett's Bounty</dt><dd>Harathi pirate ship in underground lake</dd>
-	<dt data-coord="[15726, 16423]">Professor Portmatt's Lab</dt><dd>Bloodtide underwater number puzzle force fields</dd>
-	<dt data-coord="[11020, 19349]">Morgan's Leap</dt><dd>Caledon spiral tree and floating rocks in the sky. Escort <ins data-coord="[10696, 19663]">Brugh</ins> to regrow the giant leaves</dd>
-	<dt data-coord="[9492, 18652]">Spekks's Laboratory</dt><dd>Caledon asuran light platforms with lava below</dd>
-	<dt data-coord="[17958, 21624]">Conundrum Cubed</dt><dd>Maelstrom floating cubes and electricity</dd>
-	<dt data-coord="[17545, 21917]">Hexfoundry Unhinged</dt><dd>Sparkfly destroyed and slanted Inquest platforms</dd>
-	<dt data-coord="[18077, 17118]">Griffonrook Run</dt><dd>Lornar's steep griffons rock pillars. Entrance is an underwater hole/well covered by kelp</dd>
-	<dt data-coord="[19819, 17950]">Tribulation Rift Scaffolding</dt><dd>Dredgehaunt tall tower scaffold planks</dd>
-	<dt data-coord="[19718, 17986]">Tribulation Caverns</dt><dd>Dredgehaunt ice cave after the scaffold JP</dd>
-	<dt data-coord="[21080, 18861]">Only Zuhl</dt><dd>Timberline dredge/destroyer volcanic cave</dd>
-	<dt data-coord="[28465, 15425]">Loreclaw Expanse</dt><dd>Ashford water cavern Ascalonian building ruins</dd>
-	<dt data-coord="[28948, 16834]">Branded Mine</dt><dd>Fields metal platforms jaggedly hung on chains</dd>
-	<dt data-coord="[31116, 15198]">Behem Gauntlet</dt><dd>Blazeridge deep spider bat cave</dd>
-	<dt data-coord="[30901, 12471]">Craze's Folly</dt><dd>Blazeridge Separatists cave hideout</dd>
-	<dt data-coord="[13598, 24798]">Antre of Adjournment</dt><dd>Malchor's cave wall climb with mini treasure chests</dd>
+<dl data-jpdif="1" class="mapJPList">
+	<dt id="mapJP_15" data-coord="[16300, 14605]" data-img="8RKUmMH">Troll's End</dt><dd>LA stalactite cave with planks</dd>
+	<dt id="mapJP_18" data-coord="[17210, 15481]" data-img="Asnph3I">Weyandt's Revenge</dt><dd>LA huge pirate themed cave</dd>
+	<dt id="mapJP_17" data-coord="[16670, 14183]" data-img="19dLq1S">Swashbuckler's Cove</dt><dd>Gendarran light torches and swim in time. <ins data-coord="[16510, 14221]">Cave entrance</ins> faces east</dd>
+	<dt id="mapJP_12" data-coord="[14330, 9653]" data-img="vHwaBOm">Fawcett's Bounty</dt><dd>Harathi pirate ship in underground lake</dd>
+	<dt id="mapJP_14" data-coord="[15726, 16423]" data-img="3uEgh6s">Professor Portmatt's Lab</dt><dd>Bloodtide underwater number puzzle force fields</dd>
+	<dt id="mapJP_4" data-coord="[11020, 19349]" data-img="vJ9pk02">Morgan's Leap</dt><dd>Caledon spiral tree and floating rocks in the sky. Escort <ins data-coord="[10696, 19663]">Brugh</ins> to regrow the giant leaves</dd>
+	<dt id="mapJP_1" data-coord="[9492, 18652]" data-img="wiRtb7r">Spekks's Laboratory</dt><dd>Caledon asuran light platforms with lava below</dd>
+	<dt id="mapJP_21" data-coord="[17958, 21624]" data-img="xE1n8zJ">Conundrum Cubed</dt><dd>Maelstrom floating cubes and electricity</dd>
+	<dt id="mapJP_20" data-coord="[17545, 21917]" data-img="LlN43yV">Hexfoundry Unhinged</dt><dd>Sparkfly destroyed Inquest facility</dd>
+	<dt id="mapJP_22" data-coord="[18077, 17118]" data-img="fR9doXu">Griffonrook Run</dt><dd>Lornar's steep griffons rock pillars. <a href="http://i.imgur.com/rJk97wh.png">Entrance note</a></dd>
+	<dt id="mapJP_24" data-coord="[19819, 17950]" data-img="2XMfX13">Tribulation Rift Scaffolding</dt><dd>Dredgehaunt tall tower scaffold planks</dd>
+	<dt id="mapJP_23" data-coord="[19718, 17986]" data-img="2jLd6zm">Tribulation Caverns</dt><dd>Dredgehaunt ice cave after the scaffold JP</dd>
+	<dt id="mapJP_26" data-coord="[21080, 18861]" data-img="jG5uLNJ">Only Zuhl</dt><dd>Timberline ice cave then lava dredge/destroyer mine. You have to kill a champ at the end to get credit</dd>
+	<dt id="mapJP_36" data-coord="[28465, 15425]" data-img="dtnDiEQ">Loreclaw Expanse</dt><dd>Ashford water cavern Ascalonian ruins with traps</dd>
+	<dt id="mapJP_37" data-coord="[28948, 16834]" data-img="QATS0uY">Branded Mine</dt><dd>Fields metal platforms jaggedly hung on chains</dd>
+	<dt id="mapJP_39" data-coord="[31116, 15198]" data-img="5AOBdga">Behem Gauntlet</dt><dd>Blazeridge deep spider bat cave</dd>
+	<dt id="mapJP_38" data-coord="[30901, 12471]" data-img="2Q5FzbJ">Craze's Folly</dt><dd>Blazeridge Separatists hideout and troll cave. <a href="http://i.imgur.com/WNCAQlk.png">Grand Chest note</a></dd>
+	<dt id="mapJP_9" data-coord="[13598, 24798]" data-img="JlHp1Jb">Antre of Adjournment</dt><dd>Malchor's cave wall climb with mini treasure chests</dd>
 </dl>
 <br />
 <h2>Hard <span class="mapLegendLine" style="border-bottom: 2px solid red"></span></h2>
 A marathon of intricate jumps.
-<dl class="mapJPList">
-	<dt data-coord="[15379, 14282]">Not So Secret</dt><dd>Gendarran aetherblade hideout with trampolines</dd>
-	<dt data-coord="[9235, 18967]">Goemm's Lab</dt><dd>Metrica floating landmasses in the sky as asura weather stations</dd>
-	<dt data-coord="[10963, 19197]">Dark Reverie</dt><dd>Caledon nightmare court blue hideout after Morgan's Spiral</dd>
-	<dt data-coord="[21357, 21885]">Hidden Garden</dt><dd>Maelstrom unlock four element cantles. Keeper portal locations: <ins data-coord="[18335, 22125]">Earth</ins>, <ins data-coord="[19523, 22724]">Light</ins>, <ins data-coord="[20143, 22209]">Waves</ins>, <ins data-coord="[20770, 23385]">Winds</ins></dd>
-	<dt data-coord="[27345, 13106]">Chaos Crystal Cavern</dt><dd>Marches skip rocks jumps with disorienting character transformations</dd>
-	<dt data-coord="[12780, 19377]">Skipping Stones</dt><dd>Southsun stones gushed up by geysers</dd>
-	<dt data-coord="[13610, 25044]">Scavenger's Chasm</dt><dd>Malchor's the hardest JP in the game collecting 12 orbs</dd>
+<dl data-jpdif="2" class="mapJPList">
+	<dt id="mapJP_13" data-coord="[15379, 14282]" data-img="wEG8PMR">Not So Secret</dt><dd>Gendarran aetherblade hideout with trampolines</dd>
+	<dt id="mapJP_0" data-coord="[9235, 18967]" data-img="782GdE5">Goemm's Lab</dt><dd>Metrica floating landmasses in the sky as asura weather stations</dd>
+	<dt id="mapJP_3" data-coord="[10963, 19197]" data-img="KcUE585">Dark Reverie</dt><dd>Caledon nightmare court blue hideout after Morgan's Spiral</dd>
+	<dt id="mapJP_27" data-coord="[21357, 21885]" data-img="ZgnQGFR">Hidden Garden</dt><dd>Maelstrom unlock four element cantles. Keeper portal locations: <ins data-coord="[18335, 22125]">Earth</ins>, <ins data-coord="[19523, 22724]">Light</ins>, <ins data-coord="[20143, 22209]">Waves</ins>, <ins data-coord="[20770, 23385]">Winds</ins></dd>
+	<dt id="mapJP_6" data-coord="[12780, 19377]" data-img="dxTDLqJ">Skipping Stones</dt><dd>Southsun stones gushed up by geysers</dd>
+	<dt id="mapJP_10" data-coord="[13610, 25044]" data-img="kDX7ZEq">Scavenger's Chasm</dt><dd>Malchor's convoluted orrian ruins cave collecting 12 orbs</dd>
 </dl>
 <button id="mapJPUncheck" class="cssRight">Uncheck All</button>
 </div>
