--- a/map.html
+++ b/map.html
@@ -402,7 +402,7 @@ You may need to complete the heart before you can purchase.
 <dl>
 	<dt>Activity<dt><dd>Go to the blue/red flag icon in a city to start. These may be time consuming except for Crab Toss.</dd>
 	<dt>Costume Brawl<dt><dd>Ask map chat for brawl, kind people will usually not hit back.</dd>
-	<dt>Crafter<dt><dd>Refine materials you will use.</dd>
+	<dt>Crafter<dt><dd>Refine materials you will use. Refining <a href="http://wiki.guildwars2.com/wiki/Essence_of_Luck">Essences of Luck</a> counts as Masterwork.</dd>
 	<dt>Dungeon<dt><dd>Do Citadel of Flame dungeon <a href="http://wiki.guildwars2.com/wiki/Citadel_of_Flame_(explorable)#Ferrah">Path 1</a> (Ferrah).</dd>
 	<dt>Events (Group/Regional/Mentor)<dt><dd>Do world bosses for profit, or Queensdale events for easiness. Or just ask for events in map chat.</dd>
 	<dt>Feast<dt><dd>Buy Rice in Bulk from any master chef in town.</dd>
