Preview of sidebar sectional icons

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 					<br />
 					<h2>Defaults</h2>
 					<div class="optButtons">
-						<button id="optRestoreAllChains" title="Unhide all chains and uncheck them.">Restore All Chains</button>
+						<button id="optRestoreAllChains" title="Unhide all world bosses and uncheck them.">Restore All Chains</button>
 						<button id="optClearLocalStorage" title="Clear the localStorage which stores options and states, as if you visited for the first time.">Clear Website Memory</button>
 					</div>
 					<br />
