--- a/map.html
+++ b/map.html
@@ -243,11 +243,12 @@ var GW2T_RESOURCES_DATA = {
 	
 }
 </script>
+<!--<div class="menuBeam"><img src="img/map/completion.png" alt="Map Zones" /><img src="img/ui/ap.png" alt="Daily Achievements" /><img src="img/ui/resource.png" alt="Resource Nodes" /><img src="img/ui/jp.png" alt="Jumping Puzzles" /></div>-->
 <div class="cntComposition">
 
 
 <h1>Map</h1>
-<header id="mapHeader_Zone" class="jsCollapsible"><img src="img/map/completion.png" alt="Jumping Puzzles" />Map Zones</header>
+<header id="headerMap_Zone" class="jsCollapsible"><img src="img/map/completion.png" alt="Map Zones" />Map Zones</header>
 <div>
 <div class="mapZoneList mapLinks">
 	<div>
@@ -308,7 +309,7 @@ var GW2T_RESOURCES_DATA = {
 </div>
 </div>
 
-<header id="mapHeader_Daily" class="jsCollapsible"><img src="img/ui/ap.png" alt="Daily Achievements" />Daily Achievements</header>
+<header id="headerMap_Daily" class="jsCollapsible"><img src="img/ui/ap.png" alt="Daily Achievements" />Daily Achievements</header>
 <div>
 <p>These are some places to complete dailies quickly; the top of each list should be the fastest. Most of the places are based on the <a href="http://wiki.guildwars2.com/wiki/Daily">wiki</a>; if you know a good spot, please <a href="http://forum.renaka.com/topic/5476238/">share it</a>.</p>
 <button id="mapToggle_Daily" class="cssRight">Toggle Icons</button>
@@ -419,7 +420,7 @@ You may need to complete the heart before you can purchase.
 </div>
 
 
-<header id="mapHeader_Resource" class="jsCollapsible"><img src="img/ui/resource.png" alt="Resource Nodes" />Resource Nodes</header>
+<header id="headerMap_Resource" class="jsCollapsible"><img src="img/ui/resource.png" alt="Resource Nodes" />Resource Nodes</header>
 <div>
 <div style="width:100%;height:32px"><button id="mapToggle_Resource" class="cssRight">Toggle Icons</button></div>
 <div class="mapResourceList">
@@ -435,7 +436,7 @@ Rich and T6 nodes reset in about 22 hours after gathering; T1-T5 nodes reset in 
 </div>
 
 
-<header id="mapHeader_JP" class="jsCollapsible"><img src="img/ui/jp.png" alt="Jumping Puzzles" />Jumping Puzzles</header>
+<header id="headerMap_JP" class="jsCollapsible"><img src="img/ui/jp.png" alt="Jumping Puzzles" />Jumping Puzzles</header>
 <div>
 <p>The map pin refers to the JP's entrance. JPs in each list are sorted by location. Click on a checkbox here or a JP icon on the map to auto-save the checklist. Double click a JP icon to zoom in/out.</p>
 <button id="mapToggle_JP" class="cssRight">Toggle Icons</button>
